@@ -1,13 +1,0 @@
-# audiodir.conf
-#
-# This is the sample configuration file for the AudioDir CGI web
-# script.
-#
-# (C) Copyright 2005 Fred Gleason <fredg@salemradiolabs.com>
-#
-
-[Test]
-LocalPath=/srv/www/htdocs
-DownloadPath=http://localhost
-StreamPath=rtsp://localhost
-
