@@ -49,3 +49,6 @@
 2014-08-19 Fred Gleason <fredg@paravelsystems.com>
 	* Cleaned up warnings in 'cgilib.cpp', 'conflib.cpp' and
 	'filelist.cpp'.
+2014-08-19 Fred Gleason <fredg@paravelsystems.com>
+	* Updated 'README'.
+	* Renamed 'audiodir.conf' to 'audiodir.conf-sample'.
